--- a/Resources/TransportView.xib
+++ b/Resources/TransportView.xib
@@ -11,7 +11,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TransportView" customModule="Stingtk" customModuleProvider="target">
             <connections>
+                <outlet property="nextButton" destination="amq-cP-E4J" id="Oty-Yt-kJz"/>
                 <outlet property="playButton" destination="y23-dR-PwW" id="5kW-vh-XVk"/>
+                <outlet property="previousButton" destination="N6t-Wv-uJW" id="YEF-FF-Ahd"/>
                 <outlet property="stopButton" destination="mUe-Rk-ltB" id="3M6-3q-be4"/>
                 <outlet property="view" destination="iN0-l3-epB" id="aeD-MT-qko"/>
             </connections>
@@ -27,19 +29,31 @@
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="QXm-bq-c4M">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="y23-dR-PwW">
+                                <rect key="frame" x="33" y="12" width="64" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="play"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="mUe-Rk-ltB">
+                                <rect key="frame" x="128" y="20" width="48" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="stop"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="N6t-Wv-uJW">
+                                <rect key="frame" x="208" y="30" width="32" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="ipodprevious"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="amq-cP-E4J">
+                                <rect key="frame" x="266" y="30" width="32" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="ipodnext"/>
+                            </button>
+                        </subviews>
                     </view>
                     <blurEffect style="light"/>
                 </visualEffectView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="y23-dR-PwW">
-                    <rect key="frame" x="33" y="12" width="64" height="64"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" image="play"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="mUe-Rk-ltB">
-                    <rect key="frame" x="128" y="20" width="48" height="48"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" image="stop"/>
-                </button>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             <nil key="simulatedStatusBarMetrics"/>
@@ -48,6 +62,8 @@
         </view>
     </objects>
     <resources>
+        <image name="ipodnext" width="32" height="25"/>
+        <image name="ipodprevious" width="32" height="25"/>
         <image name="play" width="64" height="64"/>
         <image name="stop" width="48" height="48"/>
     </resources>
