--- a/Resources/TransportView.xib
+++ b/Resources/TransportView.xib
@@ -9,13 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TransportView" customModule="Stingtk" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaybackViewController" customModule="Stingtk" customModuleProvider="target">
             <connections>
-                <outlet property="nextButton" destination="amq-cP-E4J" id="Oty-Yt-kJz"/>
-                <outlet property="playButton" destination="y23-dR-PwW" id="5kW-vh-XVk"/>
-                <outlet property="previousButton" destination="N6t-Wv-uJW" id="YEF-FF-Ahd"/>
-                <outlet property="stopButton" destination="mUe-Rk-ltB" id="3M6-3q-be4"/>
-                <outlet property="view" destination="iN0-l3-epB" id="aeD-MT-qko"/>
+                <outlet property="transportView" destination="iN0-l3-epB" id="Ar5-Vc-Td3"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -34,21 +30,33 @@
                                 <rect key="frame" x="33" y="12" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="play"/>
+                                <connections>
+                                    <action selector="playSting" destination="-1" eventType="touchUpInside" id="gPP-lq-KeX"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="mUe-Rk-ltB">
                                 <rect key="frame" x="128" y="20" width="48" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="stop"/>
+                                <connections>
+                                    <action selector="stopSting" destination="-1" eventType="touchUpInside" id="i7l-lD-82m"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="N6t-Wv-uJW">
                                 <rect key="frame" x="208" y="30" width="32" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="ipodprevious"/>
+                                <connections>
+                                    <action selector="previousSting" destination="-1" eventType="touchUpInside" id="g2m-9v-gfT"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="amq-cP-E4J">
                                 <rect key="frame" x="266" y="30" width="32" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="ipodnext"/>
+                                <connections>
+                                    <action selector="nextSting" destination="-1" eventType="touchUpInside" id="AfS-T3-LIl"/>
+                                </connections>
                             </button>
                         </subviews>
                     </view>
